--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   bdk_flutter: ^0.2.3
-  flutter_rust_bridge: 1.54.0 // Force for now as 1.60.0 does not work
+  flutter_rust_bridge: 1.54.0 # Force for now as 1.60.0 does not work
 
 dev_dependencies:
   flutter_test:
