--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  flutter_platform_widgets: ^2.1.0
   bdk_flutter: ^0.2.3
   flutter_riverpod: ^2.1.3
   flutter_rust_bridge: 1.54.0 # Force for now as 1.60.0 does not work
