--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,9 +15,12 @@ dependencies:
   flutter_platform_widgets: ^2.1.0
   bdk_flutter: ^0.2.3
   flutter_riverpod: ^2.1.3
-  flutter_rust_bridge: 1.54.0 # Force for now as 1.60.0 does not work
+  flutter_rust_bridge: 1.54.0 # Force for now as 1.60.0 does not work with bdk_flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
+flutter:
+  uses-material-design: true
