--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bdk_flutter: ^0.3.1
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^2.1.0
-  bdk_flutter: ^0.3.1
   flutter_riverpod: ^2.1.3
+  flutter_secure_storage: ^7.0.1
 
 dev_dependencies:
   flutter_test:
