--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   flutter_platform_widgets: ^2.1.0
   flutter_riverpod: ^2.1.3
   flutter_secure_storage: ^7.0.1
+  bitcoin_ui_kit:
+    git:
+      url: https://github.com/bdgwallet/bitcoinuikit-flutter.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
