--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bdk_flutter: ^0.3.1
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^2.1.0
   flutter_riverpod: ^2.1.3
@@ -20,6 +19,11 @@ dependencies:
     git:
       url: https://github.com/bdgwallet/bitcoinuikit-flutter.git
       ref: main
+  ldk_node: ^0.1.0
+  path_provider: ^2.0.15
+
+dependency_overrides:
+  collection: ^1.17.0
 
 dev_dependencies:
   flutter_test:
