--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bdk_flutter: ^0.28.0
   cupertino_icons: ^1.0.2
   flutter_platform_widgets: ^2.1.0
   flutter_riverpod: ^2.1.3
@@ -24,6 +25,7 @@ dependencies:
 
 dependency_overrides:
   collection: ^1.17.0
+  flutter_rust_bridge: 1.75.1 # Conflicts between ldk-node and bdk
 
 dev_dependencies:
   flutter_test:
