--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,30 +11,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bdk_flutter: ^0.28.0
   bitcoin_icons:
     git:
       url: https://github.com/danielnordh/bitcoin_icons.git
       ref: patch-1
   bitcoin_ui: ^1.0.5
   cupertino_icons: ^1.0.2
-  flutter_platform_widgets: ^3.3.5
+  flutter_platform_widgets: ^6.0.2
   flutter_riverpod: ^2.1.3
-  flutter_secure_storage: ^7.0.1
+  flutter_secure_storage: ^9.0.0
   ldk_node:
     git:
       url: https://github.com/LtbLightning/ldk-node-flutter
-      ref: main
+      ref: 5061c9e754247fbf1e132621f22990fd0c452b89
   path_provider: ^2.0.15
-
-dependency_overrides:
-  collection: ^1.17.0
-  flutter_rust_bridge: 1.75.1 # Conflicts between ldk-node and bdk
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
